--- a/CSS/style.css
+++ b/CSS/style.css
@@ -33,7 +33,7 @@ div#img_form {
     width: 248px;
     height: 100%;
     background: url('../Content/Images/banner_login_be.jpg') no-repeat;
-    background-size: contain;
+    background-size: cover;
     border-bottom-left-radius: 3px;
     border-top-left-radius: 3px;
     
