--- a/CSS/style.css
+++ b/CSS/style.css
@@ -27,6 +27,7 @@ div#content_wrap {
     top: 27px;
     left: calc(50% - 299px);
     display: flex;
+    box-shadow: -3px 1.5px 4px #ada9a9;
 }
 div#img_form {
     display: block;
@@ -45,6 +46,7 @@ div#form {
     background: #fff;
     border-bottom-right-radius: 3px;
     border-top-right-radius: 3px;
+    box-shadow: 3px 1.5px 4px #ada9a9;
 }
 div#login {
     text-align: center;
