--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,4 +1,8 @@
-﻿* {
+html, body {
+    width: 100%;
+    height: 100%;
+}
+* {
     padding: 0;
     margin: 0;
     box-sizing: border-box;
@@ -13,18 +17,23 @@ div#header {
     height: 66px;
     width: 100%;
     background: url('../Content/Images/mshopkeeper_logo.png') #026b97 no-repeat 20px 8px;
+    position: fixed;
+    top: 0;
+    z-index: 9;
 }
-div#content {
+body div#content {
     width: 100%;
-    height: 429px;
-    background: #e5e5e5;
+    height: calc(100% - 198px);
     position: relative;
+    top: 66px;
+    bottom: 132px;
+    background: #e5e5e5;
 }
-div#content_wrap {
+div#content div#content_wrap {
     width: 598px;
     height: 375px;
     position: absolute;
-    top: 27px;
+    top: calc(50% - 187.5px);
     left: calc(50% - 299px);
     display: flex;
     box-shadow: -3px 1.5px 4px #ada9a9;
@@ -37,7 +46,7 @@ div#img_form {
     background-size: cover;
     border-bottom-left-radius: 3px;
     border-top-left-radius: 3px;
-    
+   
 }
 div#form {
     display: block;
@@ -116,16 +125,19 @@ div#support a:nth-child(1) {
 div#support a:nth-child(2) {
     float: right;
 }
-div#link {
+div#footer {
     width: 100%;
-    height: 63px;
-    background: #fff;
+    text-align: center;
     position: fixed;
-    top: 495px;
-    bottom: 48px;
+    bottom: 0;
 }
-div#contact {
-    margin-top: 19px;
+div#footer div#link {
+    width: 100%;
+    height: 84px;
+    background: #fff;
+    padding: 19px 0;
+}
+div#footer div#contact {
     text-align: center;
     padding-left: 26px;
 }
@@ -165,19 +177,16 @@ div#time p {
     font-size: 13px;
     font-family: Roboto;
 }
-div#footer {
-    width: 100%;
+div#footer div#copyright {
     height: 48px;
-    background: #026B96;
-    text-align: center;
-    position: fixed;
-    bottom: 0;
+    width: 100%;
+    background: #026B79;
 }
-div#footer p {
+div#footer div#copyright p {
     font-family: Roboto;
     font-size: 13px;
     color: #fff;
-    padding: 16px 0; 
+    padding: 16px 0;
 }
   
 
