--- a/CSS/style.css
+++ b/CSS/style.css
@@ -180,7 +180,7 @@ div#time p {
 div#footer div#copyright {
     height: 48px;
     width: 100%;
-    background: #026B79;
+    background: #026b97;
 }
 div#footer div#copyright p {
     font-family: Roboto;
